--- a/PizzaConsole/OrderPizza.csproj
+++ b/PizzaConsole/OrderPizza.csproj
@@ -6,6 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="5.0.0" />
     <PackageReference Include="Spectre.Console" Version="0.41.0" />
   </ItemGroup>
 
